# rust-website

./: .containerignore  Cargo.toml  Containerfile  LICENSE.md  compose.yaml  seed_data.sql
migrations/: 20250706024833_posts.down.sql  20250706024833_posts.up.sql  20250706180911_post_id.down.sql  20250706180911_post_id.up.sql
src/: main.rs  posts.rs
src/routes/: delete_post.rs  edit_post.rs  index.rs  mod.rs  new_post.rs
static/: styles.css
templates/: base.html  edit_post.html  index.html  new_post.html
