[package]
name = "rust-website"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14"
axum = { version = "0.8", features = ["form"] }
dotenv = "0.15"
serde = "1.0.219"
sqlx = { version = "0.8", features = ["migrate", "postgres", "runtime-tokio-rustls", "uuid"] }

tokio = { version = "1.46", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
